webhook-admission-controller/Validating-Admission-Controller.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-always-allow
webhooks:
  - name: validating-always-allow.edcelvista.com
    rules:
      - apiGroups:
        - '*'
        apiVersions:
        - '*'
        operations:
        - CREATE
        - UPDATE
        resources:
        - 'pods'
        scope: '*'
    clientConfig:
      # url: https://webhook.custom-webhook.svc.cluster.local/webhook/validating/always-allow
      service:
        name: webhook
        namespace: custom-webhook
        path: "/webhook/validating/always-allow"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPRENDQWlDZ0F3SUJBZ0lVYWUyRjZCTFllVzgyL2FJRmNyYXBUZjVveUZZd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pURWpNQ0VHQTFVRUF3d2FkMlZpYUc5dmF5NWpkWE4wYjIwdGQyVmlhRzl2YXk1emRtTXdIaGNOTWpVdwpOREkxTVRNME5UUTBXaGNOTWpVd05USTFNVE0wTlRRMFdqQWxNU013SVFZRFZRUUREQnAzWldKb2IyOXJMbU4xCmMzUnZiUzEzWldKb2IyOXJMbk4yWXpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU1MSi9YeFM4Tk5jc0ExR3o0YVU3dkIyRGxlaE5MNldGTTRjcXhkSjRZbFJ2Qnd4S3VvN29tSXJJMy9JU3NVbAo4MHVzb1FvcmdR [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    # failurePolicy: Ignore
    matchPolicy: Equivalent
    namespaceSelector: {}
    objectSelector:
      matchExpressions:
      - key: custom-webhook.edcelvista.com/validate-always-allow
        operator: Exists
    timeoutSeconds: 10
