webhook-admission-controller/admission-controllers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-pod
webhooks:
  - name: validating-pod.edcelvista.com
    rules:
      - apiGroups:
        - ''
        apiVersions:
        - 'v1'
        operations:
        - CREATE
        resources:
        - 'pods'
        scope: 'Namespaced'
    clientConfig:
      # url: https://webhook.custom-webhook.svc.cluster.local/webhook/validating/pod
      service:
        name: webhook
        namespace: custom-webhook
        path: "/webhook/validating/pod"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPRENDQWlDZ0F3SUJBZ0lVSHRJd2lDaFA1RWEvNzJqN1ZHQ2R5RkxzQ204d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pURWpNQ0VHQTFVRUF3d2FkMlZpYUc5dmF5NWpkWE4wYjIwdGQyVmlhRzl2YXk1emRtTXdIaGNOTWpVdwpOakF5TVRFeE1qVTVXaGNOTWpVd056QXlNVEV4TWpVNVdqQWxNU013SVFZRFZRUUREQnAzWldKb2IyOXJMbU4xCmMzUnZiUzEzWldKb2IyOXJMbk4yWXpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQUpkRTYyb0FhZjhjQmwxakxpaUpuRkR6eVozQ2dRTDlaTE13bGFSWXcxZjhTSkd5ZDZ3aVdQdjNxb1dRcitPeQo4bHJwS051bzQ3 [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    # failurePolicy: Ignore
    matchPolicy: Equivalent
    namespaceSelector: {}
    objectSelector:
      matchExpressions:
      - key: custom-webhook.edcelvista.com/validate-pod
        operator: Exists
    timeoutSeconds: 5
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-pod
webhooks:
  - name: mutating-pod.edcelvista.com
    rules:
      - apiGroups:
        - ''
        apiVersions:
        - 'v1'
        operations:
        - CREATE
        resources:
        - 'pods'
        scope: 'Namespaced'
    clientConfig:
      service:
        name: webhook
        namespace: custom-webhook
        path: /webhook/mutating/pod
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPRENDQWlDZ0F3SUJBZ0lVSHRJd2lDaFA1RWEvNzJqN1ZHQ2R5RkxzQ204d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pURWpNQ0VHQTFVRUF3d2FkMlZpYUc5dmF5NWpkWE4wYjIwdGQyVmlhRzl2YXk1emRtTXdIaGNOTWpVdwpOakF5TVRFeE1qVTVXaGNOTWpVd056QXlNVEV4TWpVNVdqQWxNU013SVFZRFZRUUREQnAzWldKb2IyOXJMbU4xCmMzUnZiUzEzWldKb2IyOXJMbk4yWXpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQUpkRTYyb0FhZjhjQmwxakxpaUpuRkR6eVozQ2dRTDlaTE13bGFSWXcxZjhTSkd5ZDZ3aVdQdjNxb1dRcitPeQo4bHJwS051bzQ3 [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    # failurePolicy: Ignore
    matchPolicy: Equivalent
    namespaceSelector: {}
    objectSelector:
      matchExpressions:
      - key: custom-webhook.edcelvista.com/mutate-pod
        operator: Exists
    timeoutSeconds: 5
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-tenant
webhooks:
  - name: validating-tenant.edcelvista.com
    rules:
      - apiGroups:
        - ''
        apiVersions:
        - 'v1'
        operations:
        - CREATE
        - UPDATE
        resources:
        - 'tenant'
        scope: 'Cluster'
    clientConfig:
      # url: https://webhook.custom-webhook.svc.cluster.local/webhook/validating/tenant
      service:
        name: webhook
        namespace: custom-webhook
        path: "/webhook/validating/tenant"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPRENDQWlDZ0F3SUJBZ0lVSHRJd2lDaFA1RWEvNzJqN1ZHQ2R5RkxzQ204d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pURWpNQ0VHQTFVRUF3d2FkMlZpYUc5dmF5NWpkWE4wYjIwdGQyVmlhRzl2YXk1emRtTXdIaGNOTWpVdwpOakF5TVRFeE1qVTVXaGNOTWpVd056QXlNVEV4TWpVNVdqQWxNU013SVFZRFZRUUREQnAzWldKb2IyOXJMbU4xCmMzUnZiUzEzWldKb2IyOXJMbk4yWXpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQUpkRTYyb0FhZjhjQmwxakxpaUpuRkR6eVozQ2dRTDlaTE13bGFSWXcxZjhTSkd5ZDZ3aVdQdjNxb1dRcitPeQo4bHJwS051bzQ3 [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    # failurePolicy: Ignore
    matchPolicy: Equivalent
    namespaceSelector: {}
    objectSelector:
      matchExpressions:
      - key: custom-webhook.edcelvista.com/tenant
        operator: Exists
    timeoutSeconds: 5
